--- a/notes/templates/home.html
+++ b/notes/templates/home.html
@@ -2,4 +2,33 @@
 
 {% block content %}
 
+<div class="jumbotron">
+    <h1 class="display-6">Hi, {{user['username']}}</h1> 
+    Welcome To Notes
+</div>
+
+
+<div id="card" class="card text-white bg-dark mb-3" style="max-width: 70rem;">
+    <div class="card-header">
+       <h5 class="text-white">  Your Notebooks   </h5>
+       <a href="{{url_for('new_notebook')}}"  class="btn btn-secondary btn-sm">New Notebook</a>
+    </div>
+</div>
+
+
+
+<div id="card" class="card bg-secondary mb-3 card-body" style="max-width: 70rem; max-height: 25rem; margin-top: 0px; flex-direction: row; overflow-y: scroll; -webkit-flex-wrap: wrap; flex-wrap: wrap;">
+    {% for name in names %}
+    <a href="{{url_for('notebook', notebook_id = name['_id'])}}">
+        <div id="notebook" class="card text-white bg-dark mb-3" style="max-width: 15rem;min-height: 10rem; max-height: 10rem; overflow: hidden; float: left;">
+            <div class="card-header">{{name['name']}}</div>
+            <div class="card-body">
+            <p class="card-text" style="white-space: pre-wrap;">{{name['description']}}</p>
+            </div>
+        </div>
+    </a>
+    {% endfor %}
+</div>
+
+
 {% endblock %}
