--- a/notes/templates/signup.html
+++ b/notes/templates/signup.html
@@ -1,21 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card text-white bg-primary mb-3 " style="max-width: 20rem;">
+
+<div id="card" class="card text-white bg-dark mb-3 " style="max-width: 20rem;">
     <h3 class="card-header"> Register </h3>
     <div class="card-body">
-        <form action="">
-            <label for="inputDefault">Username</label>
-            <input type="text"  class="form-control" id="inputDefault">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <div class="alert alert-dismissible alert-warning">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        <p class="mb-0">{{msg}}</p>
+                    </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+            
+         
+        <form action="{{url_for('signup')}}" method ='POST'>
+            <label for="inputDefault">Username</label> 
+            <input type="text"  name = "username" class="form-control" id="inputDefault" required>
             <br>
             <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             <br>
             <label for="exampleInputPassword1">Password</label>
-            <input type="password"  class="form-control" id="exampleInputPassword1">
+            <input type="password" name="password" class="form-control" id="exampleInputPassword1" required>
             <br>
             <input type="submit" value="Submit" class="btn btn-secondary">
         </form>
     </div>
 </div>
+<h6>Already a member? <a href="{{url_for('index')}}" method="GET"><button class="btn btn-dark">Sign In!</button></a></h6>
 {% endblock %}
